# movie_codec

./: CMakeLists.txt  README.md  movie_codec.cpp  movie_codec.h  movie_codec_global.h
audio/: aframe.c  audio_buffer.c  audio_buffer.h  audio_fmt-conversion.c  audio_fmt-conversion.h  audio_format.c
audio/decode/: ad_lavc.c  ad_spdif.c
audio/filter/: af_format.c  af_lavcac3enc.c  af_rubberband.c  af_scaletempo.c
common/: av_common.c  av_log.c  codecs.c  common.c  encode_lavc.c  msg.c  playlist.c  recorder.c  tags.c
demux/: demux.c  packet.c
filters/: f_autoconvert.c  f_lavfi.c  f_swresample.c  filter.c.autosave  filter.h
input/: input.c
libmpv/: client.h  mpv.def  qthelper.hpp  render.h
misc/: dispatch.c
options/: m_config.c  m_option.c  m_property.c  options.c  path.c
osdep/: atomic.h  io.h  path-unix.c
picture/: mpv.drawio  mpv.html  mpv.xml  vo.drawio
player/: audio.c  client.c  command.c  configfiles.c  core.h  external_files.c  loadfile.c  lua.c  main.c  misc.c  osd.c  playloop.c  screenshot.c  sub.c  video.c
stream/: audio_in.h  frequencies.h  stream.c  stream_bluray.c  stream_dvdnav.c  stream_null.c  tv.c  tv.h  tvi_v4l2.c
sub/: ass_mp.c  dec_sub.c  dec_sub.h  draw_bmp.h  img_convert.c  osd_libass.c  osd_state.h  sub_osd.c
video/: csputils.c  fmt-conversion.h  hwdec.c  image_loader.c  mp_image.c  mp_image_pool.c  vdpau.h
video/decode/: vd_lavc.c
video/filter/: vf_sub.c
