project(movie_codec)
set(CMAKE_AUTOMOC ON)
set(CMD_NAME movie_codec)



add_definitions(-D_MOVIE_CODEC_)
include_directories(${CMAKE_INCLUDE_CURRENT_DIR}
    ./
    ./build
    /usr/include/
    /usr/include/libdrm
    /usr/include/SDL2
    /usr/include/lua5.1
    /usr/include/uchardet )

find_package(Qt5Core)
#add_executable

add_executable( ${PROJECT_NAME}
    movie_codec.cpp
    audio/decode/ad_spdif.c
    audio/decode/ad_lavc.c
    video/decode/vd_lavc.c
    common/av_common.c
    common/codecs.c
    common/msg.c
    misc/bstr.c
    ta/ta_talloc.c
    ta/ta.c
    ta/ta_utils.c
    audio/aframe.c
    audio/chmap.c
    misc/ring.c
    options/m_option.c
    player/client.c
    input/cmd.c
    input/input.c
    stream/stream.c
    sub/sub_osd.c
    osdep/timer.c
    sub/dec_sub.c
    player/misc.c
    audio/chmap_sel.c
    player/playloop.c
    video/mp_image_pool.c
    video/mp_image.c
    player/loadfile.c
    options/m_config.c
    options/m_property.c
    player/command.c
    video/csputils.c
    video/out/vo.c
    options/path.c
    demux/demux.c
    video/hwdec.c
    misc/node.c
    demux/packet.c
    common/playlist.c
    player/sub.c
    player/video.c
    stream/tv.c
    stream/stream_null.c
    demux/demux_disc.c
    video/out/vo_libmpv.c
    stream/stream_dvb.c
    common/tags.c
    video/out/dr_helper.c
    demux/demux_lavf.c
    sub/sd_lavc.c
    sub/sd_ass.c
    misc/charset_conv.c
    player/audio.c
    stream/stream_lavf.c
    stream/stream_file.c
    common/encode_lavc.c
    misc/dispatch.c
    stream/dvb_tune.c
    misc/rendezvous.c
    common/recorder.c
    sub/lavc_conv.c
    sub/ass_mp.c
    audio/out/push.c
    audio/out/pull.c
    options/options.c
    video/image_writer.c
    demux/timeline.c
    filters/f_lavfi.c
    filters/frame.c
    filters/filter.c
    player/configfiles.c
    video/out/opengl/context.c
    video/out/opengl/ra_gl.c
    video/out/gpu/gpu_utils.c
    video/out/gpu/ra.c
    video/out/vo_null.c
    filters/f_output_chain.c
    filters/f_autoconvert.c
    filters/f_auto_filters.c
    stream/stream_dvd.c
    stream/stream_dvdnav.c
    filters/f_swscale.c
    filters/f_utils.c
    filters/f_swresample.c
    video/sws_utils.c
    filters/f_decoder_wrapper.c
    demux/demux_rar.c
    input/keycodes.c
    video/out/opengl/formats.c
    audio/audio_buffer.c
    player/screenshot.c
    video/img_format.c
    misc/json.c
    player/main.c
    player/scripting.c
    stream/tvi_v4l2.c
    stream/tvi_dummy.c
    stream/audio_in.c
    stream/ai_oss.c
    stream/cache.c
    demux/demux_playlist.c
    video/out/vo_caca.c
    input/ipc-unix.c
    input/ipc.c
    video/out/aspect.c
    demux/demux_raw.c
    osdep/timer-linux.c
    stream/stream_bluray.c
    demux/demux_timeline.c
    osdep/terminal-unix.c
    stream/stream_dvd_common.c
    stream/rar.c
    osdep/io.c
    misc/thread_pool.c
    stream/stream_edl.c
    filters/f_demux_in.c
    common/av_log.c
    stream/cache_file.c
    demux/demux_null.c
    video/out/vo_gpu.c
    demux/codec_tags.c
    filters/user_filters.c
    stream/stream_memory.c
    video/out/opengl/utils.c
    video/out/gpu/gpu_video.c
    video/out/gpu/user_shaders.c
    stream/cookies.c
    video/out/gpu/shader_cache.c
    video/out/opengl/opengl_common.c
    common/common.c
    player/osd.c
    options/parse_commandline.c
    video/out/gpu/spirv.c
    stream/stream_libarchive.c
    video/out/filter_kernels.c
    video/out/gpu/gpu_hwdec.c
    video/out/gpu/video_shaders.c
    video/out/gpu/gpu_osd.c
    video/out/gpu/gpu_context.c
    sub/img_convert.c
    audio/out/ao.c
    audio/out/ao_null.c
    audio/out/ao_oss.c
    demux/demux_libarchive.c
    video/out/gpu/libmpv_gpu.c
    video/out/opengl/libmpv_gl.c
    demux/demux_cue.c
    osdep/path-unix.c
    common/version.c
    demux/demux_mkv.c
    demux/demux_mkv_timeline.c
    demux/ebml.c
#    build/ebml_defs.c
    demux/cue.c
    sub/filter_sdh.c
    osdep/polldev.c
    video/out/vo_drm.c
    video/out/vo_lavc.c
    audio/out/ao_lavc.c
    demux/demux_mf.c
    video/out/vo_image.c
    video/out/opengl/hwdec_drmprime_drm.c
    video/out/drm_prime.c
    demux/demux_edl.c
    video/out/gpu/lcms.c
    video/filter/vf_sub.c
    osdep/subprocess.c
    osdep/subprocess-posix.c
    audio/out/ao_pulse.c
    video/out/bitmap_packer.c
    audio/filter/af_lavcac3enc.c
    audio/filter/af_lavrresample.c
    video/out/vo_tct.c
    audio/audio_fmt-conversion.c
    video/out/drm_common.c
    audio/out/ao_pcm.c
    options/parse_configfile.c
    osdep/threads.c
    video/fmt-conversion.c
    sub/draw_bmp.c
    filters/f_hwtransfer.c
    player/external_files.c
    video/out/dither.c
    stream/frequencies.c
    audio/filter/af_scaletempo.c
    video/out/vulkan/spirv_nvidia.c
    video/out/vulkan/vulkan_context.c
    video/out/vulkan/vulkan_utils.c
    video/out/vulkan/malloc.c
    video/out/vulkan/ra_vk.c
    video/out/vulkan/vulkan_formats.c
    video/filter/vf_format.c
    audio/audio_format.c
    audio/filter/af_format.c
    stream/stream_avdevice.c
    stream/stream_mf.c
    stream/stream_rar.c
    stream/stream_cb.c
    video/out/drm_atomic.c
    video/out/vo_x11.c
    video/out/x11_common.c
    video/out/win_state.c
    input/event.c
    video/image_loader.c
    video/out/vo_xv.c
    video/filter/vf_vdpaupp.c
    video/filter/refqueue.c
    video/vdpau_mixer.c
    video/vdpau.c
    video/vaapi.c
    video/out/vo_vaapi.c
    video/out/vo_vdpau.c
    video/filter/vf_vavpp.c
    video/out/opengl/hwdec_vaegl.c
    video/out/vulkan/context_xlib.c
    video/out/vo_sdl.c
    video/out/opengl/egl_helpers.c
    audio/out/ao_alsa.c
    video/out/opengl/context_vdpau.c
    video/out/opengl/hwdec_vdpau.c
    player/lua.c
    video/out/opengl/context_x11egl.c
    video/out/opengl/context_glx.c
    osdep/semaphore_osx.c
    audio/out/ao_sdl.c
    osdep/main-fn-unix.c
    sub/osd_libass.c
    stream/ai_alsa1x.c
    audio/filter/af_rubberband.c
    )
#add_library(${CMD_NAME} SHARED ${SRC})

include_directories(${CMAKE_INCLUDE_CURRENT_DIR})

target_link_libraries(${PROJECT_NAME}
#    Qt5::Core
    avcodec
    avdevice
    avfilter
    avformat
    avutil
    swresample
    swscale
    dvdnav
    archive
    vulkan
    z
    dl
    drm
    caca
    pulse
    ass
    bluray
    dvdread
    X11
    Xext
    Xinerama
    Xrandr
    Xss
    Xv
    va
    va-x11
    vdpau
    EGL
    asound
    GL
    #SDL2-2.0
    SDL2
    lua5.1
    lcms2
    uchardet
    rubberband
    pthread )


